tests/fixtures/valid/if_comparison_condition.torel
unit fixtures.if_comparison_condition;

export proc main() -> Int32 {
    if 1 < 2 {
        10
    } else {
        20
    }
}
