tests/fixtures/invalid/if_condition_not_bool.torel
unit fixtures.if_condition_not_bool;

export proc main() -> Int32 {
    if 42 {
        return 1;
    } else {
        return 2;
    }
}
